[package]
name = "rustup-target"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
target-lexicon = { version = "0.12", features = ["std"] }
thiserror = "1.0"
strip-ansi-escapes = "0.1"

[dev-dependencies]
insta = { version = "1.23" }
