[package]
name = "rustup-configurator"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/akesson/rustup-configurator"
description = "Helper for listing and adding rustup targets and toolchains (coming)"
keywords = ["rustup", "target", "toolchain"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
target-lexicon = { version = "0.12", features = ["serde_support"] }
thiserror = "1.0"
strip-ansi-escapes = "0.2"

[dev-dependencies]
insta = { version = "1.23" }
